--- a/templates/show.html
+++ b/templates/show.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>标题</title>
 </head>
-<body style="margin: 0">
+<body style="margin: 0 auto">
 
-<div style="background-color: black;" class="topbar-nav">
+<div style="background-color: black; margin: 0 auto;" class="topbar-nav">
     <div style="width: 1190px;margin: 0 auto;line-height: 34px;">
         <div style="float: left;">
         <a style="padding: 0 10px;" href="#">小米商城</a>
@@ -28,19 +28,69 @@
 
 <div style="background-color: white;">
     <div style="width: 1190px; margin: 0 auto; line-height: 34px;">
-        <div style="float: left;">
+        <span style="float: left;">
             <img src="/static/logo.png">
+        </span>
+        <div style="text-align:center; height:100px; line-height:100px;">
+            <span >Xiaomi手机</span>
+            <span style="padding-left: 20px;">Redmi红米</span>
+            <span style="padding-left: 20px;">电视</span>
+            <span style="padding-left: 20px;">笔记本</span>
+            <span style="padding-left: 20px;">平板</span>
         </div>
-
-        </div>
-            <a style="padding: 10px;" href="#">Xiaomi手机</a>
-            <a style="padding: 10px;" href="#">Redmi红米</a>
-            <a style="padding: 10px;" href="#">电视</a>
-            <a style="padding: 10px;" href="#">笔记本</a>
-            <a style="padding: 10px;" href="#">平板</a>
-        <div>
     </div>
+</div>
 
+<div style="margin: 0 auto;">
+    <img src="/static/banner.jpg" alt="头图"  style="width: 80%; text-align: center; padding-left: 120px;">
+</div>
+
+<div>
+    <div style="width: 500px;height: 200px;background-color: #dfdfdf;float: left;margin-right: 10px;margin-top: 10px;padding: 5px;">
+        <div>
+            <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
+                <img alt="" src="/static/baozhangfuwu.jpg">
+                保障服务
+            </span>
+            <span style="clear: both;"></span>
+
+            <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
+                <img alt="" src="/static/baozhangfuwu.jpg">
+                保障服务
+            </span>
+            <span style="clear: both;"></span>
+
+            <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
+                <img alt="" src="/static/baozhangfuwu.jpg">
+                保障服务
+            </span>
+            <span style="clear: both;"></span>
+        </div>
+
+
+        <div>
+            <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
+                <img alt="" src="/static/baozhangfuwu.jpg">
+                保障服务
+            </span>
+            <span style="clear: both;"></span>
+
+            <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
+                <img alt="" src="/static/baozhangfuwu.jpg">
+                保障服务
+            </span>
+            <span style="clear: both;"></span>
+
+            <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
+                <img alt="" src="/static/baozhangfuwu.jpg">
+                保障服务
+            </span>
+            <span style="clear: both;"></span>
+        </div>
+
+
+    </div>
+    <div style="clear: both;"></div>
 </div>
 
 
