--- a/templates/show.html
+++ b/templates/show.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>标题</title>
+    <style>a{text-decoration:none; color: #dfdfdf;}</style>
 </head>
 <body style="margin: 0 auto">
 
-<div style="background-color: black; margin: 0 auto;" class="topbar-nav">
+<div style="background-color: black; margin: 0 auto; width: 1226px; height: 40px" class="topbar-nav">
     <div style="width: 1190px;margin: 0 auto;line-height: 34px;">
         <div style="float: left;">
-        <a style="padding: 0 10px;" href="#">小米商城</a>
-            <a style="padding: 10px;" href="#">MIUI</a>
-            <a style="padding: 10px;" href="#">云服务</a>
-            <a style="padding: 10px;" href="#">有品</a>
-            <a style="padding: 10px;" href="#">开放平台</a>
+        <a style="padding: 0 10px;" href="https://www.baidu.com">小米商城</a>
+            <a style="padding: 10px;" href="https://www.baidu.com">MIUI</a>
+            <a style="padding: 10px;" href="https://www.baidu.com">云服务</a>
+            <a style="padding: 10px;" href="https://www.baidu.com">有品</a>
+            <a style="padding: 10px;" href="https://www.baidu.com">开放平台</a>
         </div>
 
         <div style="float: right;">
@@ -28,31 +29,37 @@
 
 <div style="background-color: white;">
     <div style="width: 1190px; margin: 0 auto; line-height: 34px;">
-        <span style="float: left;">
-            <img src="/static/logo.png">
+        <span style="float: left; padding-top: 10px;">
+            <a href="https://www.baidu.com"><img src="/static/logo.png"></a>
         </span>
-        <div style="text-align:center; height:100px; line-height:100px;">
+        <div style="text-align:center; height:100px; line-height:100px; font-size: 9px;">
             <span >Xiaomi手机</span>
             <span style="padding-left: 20px;">Redmi红米</span>
             <span style="padding-left: 20px;">电视</span>
             <span style="padding-left: 20px;">笔记本</span>
             <span style="padding-left: 20px;">平板</span>
+            <span style="padding-left: 20px;">家电</span>
+            <span style="padding-left: 20px;">路由器</span>
+            <span style="padding-left: 20px;">服务</span>
+            <span style="padding-left: 20px;">社区</span>
         </div>
     </div>
 </div>
 
+<!--这是头图 -->
 <div style="margin: 0 auto;">
-    <img src="/static/banner.jpg" alt="头图"  style="width: 80%; text-align: center; padding-left: 120px;">
+    <a href="https://www.baidu.com"><img src="/static/banner.jpg" alt="头图"  style="width: 80%; text-align: center; padding-left: 120px;"></a>
 </div>
 
-<div>
-    <div style="width: 500px;height: 200px;background-color: #dfdfdf;float: left;margin-right: 10px;margin-top: 10px;padding: 5px;">
+<!--这是左侧保障服务区域 -->
+<div style="font-size: 9px; margin: 0 auto; padding-right: 10px; padding-left: 120px; padding-top: 1px;">
+    <div style="width: 25%;height: 100%;background-color: #dfdfdf;float: left;margin-right: 1000px ;margin-top: 0;padding: 5px;">
         <div>
             <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
-                <img alt="" src="/static/baozhangfuwu.jpg">
+                <img alt="保障服务" src="/static/baozhangfuwu.jpg">
                 保障服务
             </span>
-            <span style="clear: both;"></span>
+            <a style="clear: both;"></a>
 
             <span style="width: 70px; margin-top: 30px; margin-right: 10px;">
                 <img alt="" src="/static/baozhangfuwu.jpg">
@@ -87,9 +94,9 @@
             </span>
             <span style="clear: both;"></span>
         </div>
-
-
     </div>
+
+    <a href="https://www.baidu.com"><img src="/static/xiaomi11ultra.jpg"></a>
     <div style="clear: both;"></div>
 </div>
 
